--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -22,6 +22,6 @@ chrono = "0.4.22" # Used for setting DateTimes
 clap = { version = "4.0", features = ["derive"] }
 rustc-hex = "2.1.0"
 num = "0.4.0"
-surrealdb = "1.0.0-beta.9"
+mongodb = "2.5.0"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
